<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate"
        app:title="@string/label_new_task"
        app:titleTextColor="#F6F5F5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_title"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="@null"
            android:inputType="text"
            android:textColor="#5E5C5C" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_data"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/label_date"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_calendar"
        app:layout_constraintEnd_toStartOf="@id/til_hora"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/til_title" >

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:focusable="false"
            android:inputType="none"
            android:shadowColor="#F3EDED"
            android:textColor="#5E5C5C"
            android:textColorHighlight="#FDFDFD"
            android:textColorHint="#101010"
            android:textColorLink="#FDFDFD" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hora"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_hour"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@+id/til_data"
        app:layout_constraintTop_toTopOf="@id/til_data"
        app:startIconDrawable="@drawable/ic_timer">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:focusable="false"
            android:inputType="none"
            android:textColor="#5E5C5C"
            android:textColorHint="#0B0A0A" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_cancel"
        android:textAllCaps="false"
        android:textColor="#F8F5F5"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@id/btn_new_task"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:rippleColor="#000000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_task"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_new_task"
        android:textAllCaps="false"
        android:textColor="#FBF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start" />

</androidx.constraintlayout.widget.ConstraintLayout>